--- a/Src/Frontend/webapp/src/css/Volunteer/Volunteer_Dashboard.css
+++ b/Src/Frontend/webapp/src/css/Volunteer/Volunteer_Dashboard.css
@@ -6,13 +6,14 @@ body {
   padding: 0;
 }
 .nav-bar {
-  background-color: #d9d9d9;
+  background-color: #212c46;
   height: 80px;
   display: flex;
   align-items: center;
   box-sizing: border-box;
   padding: 0 27px;
   justify-content: space-between;
+  border-bottom: #000, 4px;
 }
 .top-nav {
   display: flex;
@@ -47,6 +48,7 @@ body {
   box-sizing: border-box;
   padding: 30px 60px 30px 60px;
   gap: 20px;
+  background-color: #212c46
 }
 .volunteer-left-panel {
   flex: 1;
@@ -69,6 +71,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
+  color: #ffffff;
 }
 .round-card {
   background-color: #fff;
